prusti-tests/tests/verify/fail/unsupported/higher_ranked_type.rs
fn main() {
    let _ = (0..1).filter(|_| true); //~ ERROR higher-ranked lifetimes and types are not supported
}